--- a/productpage.html
+++ b/productpage.html
@@ -24,6 +24,32 @@
         <a href="index.html"><img src="assets/Black_logo 1.svg" alt="logo-icon" /></a>
         <img src="assets/cart.svg" alt="cart-icon" class="toggle-btn" />
       </nav>
+      <div class=" cart-outer-box">
+        <img src="assets/cross-thin.svg" alt="Remove item" class="close-cart" />
+        <h1 class="page-title">Cart</h1>
+        <!-- A place to append cart content ↓ -->
+        <section class="cart-outer-card">
+          <section class="cart-card">
+            <div class="cart-img-item-container">
+              <img src="assets/kit-for-two-box.webp" alt="" />
+            </div>
+            <h3 class="cart-item-name">Kit for two</h3>
+            <p class="cart-item-description">No extras</p>
+            <p class="cart-item-price">DKK <span>300.00</span></p>
+            <img src="assets/cross-thin.svg" alt="Remove item" class="remove-cart-item" />
+            <div class="quantity-outer-box">
+              <img src="assets/minus.svg" alt="Decrease quantity" class="cart-minus" />
+              <input type="number" min="1" value="1" class="cart-item-quantity" />
+              <img src="assets/plus-rounded-thin.svg" alt="Increase quantity" class="cart-plus" />
+            </div>
+          </section>
+        </section>
+        <div class="subtotal-flex">
+          <h3>Subtotal</h3>
+          <p>DKK <span>300.00</span></p>
+        </div>
+        <a href="checkout-info.html" class="cart-to-checkout"><button>Proceed to checkout</button></a>
+      </div>
     </div>
     <div class=" cart-outer-box">
       <img src="assets/cross-thin.svg" alt="Remove item" class="close-cart" />
@@ -56,11 +82,7 @@
   <!-- hamburger menu start ↓ -->
   <section class="sec-hamburger">
     <div class="head-hamburger">
-      <img
-        class="close-icon"
-        src="assets/cross-white.png"
-        alt="X for closing hamburgermenu"
-      />
+      <img class="close-icon" src="assets/cross-white.png" alt="X for closing hamburgermenu" />
     </div>
 
     <div class="body-hamburger">
@@ -83,57 +105,29 @@
         </div>
         <div class="big-pages big-pages-shop hidden">
           <div class="big-pages-header">
-            <img
-              class="big-pages-header-logo"
-              src="assets/Black_logo.png"
-              alt="BYU studio logo"
-            />
+            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="BYU studio logo" />
           </div>
           <div class="big-pages-body-flex">
             <div class="big-pages-body">
               <a href="productlist.html?kits=true">
-                <img
-                  class="ham-cat-image"
-                  src="assets/shop-blur.png"
-                  alt=""
-                />
+                <img class="ham-cat-image" src="assets/shop-blur.png" alt="" />
                 <div class="big-link-flex">
                   <h2>KITS</h2>
-                  <img
-                    class="ham-cat-arrow"
-                    src="assets/arrow-thin.png"
-                    alt="arrow"
-                  />
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
                 </div>
               </a>
               <a href="productlist.html?refills=true">
-                <img
-                  class="ham-cat-image"
-                  src="assets/refills-blur.png"
-                  alt="ring made from blue wax"
-                />
+                <img class="ham-cat-image" src="assets/refills-blur.png" alt="ring made from blue wax" />
                 <div class="big-link-flex">
                   <h2>REFILLS</h2>
-                  <img
-                    class="ham-cat-arrow"
-                    src="assets/arrow-thin.png"
-                    alt="arrow"
-                  />
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
                 </div>
               </a>
               <a href="productlist.html?casting=true">
-                <img
-                  class="ham-cat-image"
-                  src="assets/casting-blur.png"
-                  alt="hands with several unique silver rings"
-                />
+                <img class="ham-cat-image" src="assets/casting-blur.png" alt="hands with several unique silver rings" />
                 <div class="big-link-flex">
                   <h2>CASTING</h2>
-                  <img
-                    class="ham-cat-arrow"
-                    src="assets/arrow-thin.png"
-                    alt="arrow"
-                  />
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
                 </div>
               </a>
             </div>
@@ -160,72 +154,36 @@
         </div>
         <div class="big-pages big-pages-about hidden">
           <div class="big-pages-header">
-            <img
-              class="big-pages-header-logo"
-              src="assets/Black_logo.png"
-              alt=""
-            />
+            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="" />
           </div>
           <div class="big-pages-body-flex">
             <div class="big-pages-body">
               <a href="about.html">
-                <img
-                  class="ham-cat-image"
-                  src="assets/about-blur.png"
-                  alt=""
-                />
+                <img class="ham-cat-image" src="assets/about-blur.png" alt="" />
                 <div class="big-link-flex">
                   <h2>ABOUT US</h2>
-                  <img
-                    class="ham-cat-arrow"
-                    src="assets/arrow-thin.png"
-                    alt="arrow"
-                  />
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
                 </div>
               </a>
               <a href="manifesto.html">
-                <img
-                  class="ham-cat-image"
-                  src="assets/manifesto-blur.png"
-                  alt=""
-                />
+                <img class="ham-cat-image" src="assets/manifesto-blur.png" alt="" />
                 <div class="big-link-flex">
                   <h2>MANIFESTO</h2>
-                  <img
-                    class="ham-cat-arrow"
-                    src="assets/arrow-thin.png"
-                    alt="arrow"
-                  />
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
                 </div>
               </a>
               <a href="sustainanability.html">
-                <img
-                  class="ham-cat-image"
-                  src="assets/sustainability-blur.png"
-                  alt=""
-                />
+                <img class="ham-cat-image" src="assets/sustainability-blur.png" alt="" />
                 <div class="big-link-flex">
                   <h2>SUSTAINABILITY</h2>
-                  <img
-                    class="ham-cat-arrow"
-                    src="assets/arrow-thin.png"
-                    alt="arrow"
-                  />
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
                 </div>
               </a>
               <a href="contact.html">
-                <img
-                  class="ham-cat-image"
-                  src="assets/contact-blur.png"
-                  alt=""
-                />
+                <img class="ham-cat-image" src="assets/contact-blur.png" alt="" />
                 <div class="big-link-flex">
                   <h2>CONTACT US</h2>
-                  <img
-                    class="ham-cat-arrow"
-                    src="assets/arrow-thin.png"
-                    alt="arrow"
-                  />
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
                 </div>
               </a>
             </div>
@@ -249,11 +207,7 @@
         </div>
         <div class="big-pages big-pages-getstarted hidden">
           <div class="big-pages-header">
-            <img
-              class="big-pages-header-logo"
-              src="assets/Black_logo.png"
-              alt=""
-            />
+            <img class="big-pages-header-logo" src="assets/Black_logo.png" alt="" />
           </div>
           <div class="big-pages-body-flex">
             <div class="big-pages-body">
@@ -261,41 +215,22 @@
                 <img class="ham-cat-image" src="assets/faq-blur.png" alt="" />
                 <div class="big-link-flex">
                   <h2>FAQ</h2>
-                  <img
-                    class="ham-cat-arrow"
-                    src="assets/arrow-thin.png"
-                    alt="arrow"
-                  />
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
                 </div>
               </a>
               <a href="inspiration.html">
-                <img
-                  class="ham-cat-image"
-                  src="assets/inspiration-blur.png"
-                  alt="ring made from blue wax"
-                />
+                <img class="ham-cat-image" src="assets/inspiration-blur.png" alt="ring made from blue wax" />
                 <div class="big-link-flex">
                   <h2>INSPIRATION</h2>
-                  <img
-                    class="ham-cat-arrow"
-                    src="assets/arrow-thin.png"
-                    alt="arrow"
-                  />
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
                 </div>
               </a>
               <a href="tutorial.html">
-                <img
-                  class="ham-cat-image"
-                  src="assets/tutorials-blur.png"
-                  alt="hands with several unique silver rings"
-                />
+                <img class="ham-cat-image" src="assets/tutorials-blur.png"
+                  alt="hands with several unique silver rings" />
                 <div class="big-link-flex">
                   <h2>Tutorials</h2>
-                  <img
-                    class="ham-cat-arrow"
-                    src="assets/arrow-thin.png"
-                    alt="arrow"
-                  />
+                  <img class="ham-cat-arrow" src="assets/arrow-thin.png" alt="arrow" />
                 </div>
               </a>
             </div>
@@ -307,24 +242,12 @@
       </div>
     </div>
     <div class="footer-hamburger someiconflex">
-      <a href="https://www.instagram.com/" target="_blank"
-        ><img
-          class="somelogo"
-          src="assets/instagram-white.png"
-          alt="Instagram logo"
-      /></a>
-      <a href="https://www.facebook.com/" target="_blank"
-        ><img
-          class="somelogo"
-          src="assets/facebook-white.png"
-          alt="Facebook logo"
-      /></a>
-      <a href="https://www.pinterest.com/" target="_blank"
-        ><img
-          class="somelogo"
-          src="assets/pinterest-white.png"
-          alt="Pinterest logo"
-      /></a>
+      <a href="https://www.instagram.com/" target="_blank"><img class="somelogo" src="assets/instagram-white.png"
+          alt="Instagram logo" /></a>
+      <a href="https://www.facebook.com/" target="_blank"><img class="somelogo" src="assets/facebook-white.png"
+          alt="Facebook logo" /></a>
+      <a href="https://www.pinterest.com/" target="_blank"><img class="somelogo" src="assets/pinterest-white.png"
+          alt="Pinterest logo" /></a>
     </div>
   </section>
   <!-- the end of the menu ↑ -->
@@ -450,10 +373,8 @@
     </p>
     <p id="contact">+45 12 34 56 78 | hello@byustudio.dk</p>
     <div id="some">
-      <img src="assets/ig_logo.svg" alt="" /><img
-        src="assets/facebook_logo.svg"
-        alt=""
-      /><img src="assets/Vector.svg" alt="" />
+      <img src="assets/ig_logo.svg" alt="" /><img src="assets/facebook_logo.svg" alt="" /><img src="assets/Vector.svg"
+        alt="" />
     </div>
     <div id="footerNav">
       <ul>
