--- a/productlist.html
+++ b/productlist.html
@@ -330,6 +330,7 @@
   </div>
 </footer>
 <script src="js/hamburger.js"></script>
+<script src="js/cart.js"></script>
 <script src="js/productlist.js"></script>
 
 </html>
