--- a/tutorial.html
+++ b/tutorial.html
@@ -397,6 +397,7 @@
   </footer>
   <!-- <h1 class="open-button">Open</h1> -->
 </body>
+<script src="js/cart.js"></script>
 <script src="js/hamburger.js"></script>
 
 </html>
