--- a/sustainanability.html
+++ b/sustainanability.html
@@ -323,6 +323,7 @@
   </footer>
   <!-- <h1 class="open-button">Open</h1> -->
 </body>
+<script src="js/cart.js"></script>
 <script src="js/hamburger.js"></script>
 
 </html>
