--- a/sustainanability.html
+++ b/sustainanability.html
@@ -20,7 +20,7 @@
     <nav>
       <img class="open-button" src="assets/menu.svg" alt="menu-icon" />
       <a href="index.html"><img src="assets/Black_logo 1.svg" alt="logo-icon" /></a>
-      <img src="assets/cart.svg" alt="cart-icon" />
+      <img src="assets/cart.svg" alt="cart-icon" class="toggle-btn" />
     </nav>
     <div class=" cart-outer-box">
       <img src="assets/cross-thin.svg" alt="Remove item" class="close-cart" />
