--- a/manifesto.html
+++ b/manifesto.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="css/manifesto.css" />
     <link rel="stylesheet" href="css/root.css" />
+    <link rel="stylesheet" href="css/manifesto.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/cart.css" />
@@ -345,27 +345,50 @@
     <div id="thickLines"></div>
 
     <section id="title">
-      <h1 id="decorative">What does BYU stand for</h1>
+      <h1 id="decorative">Manifesto</h1>
     </section>
     <section id="stepByStep">
-      <h2>How it works</h2>
+      <h2>What does BYU stand for</h2>
       <div class="stepsWrapper">
         <div class="oneStep">
           <img src="assets/step-one.svg" alt="" />
-          <h4>Lorem Ipsum</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium
-            feugiat pretium vitae duis rhoncus
-          </p>
+          <h4>Handmade in Denmark</h4>
         </div>
-
         <div class="oneStep">
           <img src="assets/step-two.svg" alt="" />
-          <h4>Lorem Ipsum</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium
-            feugiat pretium vitae duis rhoncus
-          </p>
+          <h4>Personalised and co-created products</h4>
+        </div>
+        <div class="oneStep">
+          <img src="assets/step-three.svg" alt="" />
+          <h4>Unique moments</h4>
+        </div>
+        <div class="oneStep">
+          <img src="assets/step-four.svg" alt="" />
+          <h4>One of a kind products</h4>
+        </div>
+        <div class="oneStep">
+          <img src="assets/step-five.svg" alt="" />
+          <h4>Responsible production business model</h4>
+        </div>
+        <div class="oneStep">
+          <img src="assets/step-six.svg" alt="" />
+          <h4>Social responsible production</h4>
+        </div>
+        <div class="oneStep">
+          <img src="assets/step-seven.svg" alt="" />
+          <h4>Good quality, long lasting products</h4>
+        </div>
+        <div class="oneStep">
+          <img src="assets/step-eight.svg" alt="" />
+          <h4>Slow fashion approach</h4>
+        </div>
+        <div class="oneStep">
+          <img src="assets/step-nine.svg" alt="" />
+          <h4>Information about responsible consumption</h4>
+        </div>
+        <div class="oneStep">
+          <img src="assets/step-ten.svg" alt="" />
+          <h4>Made by you for you</h4>
         </div>
       </div>
     </section>
