--- a/index.html
+++ b/index.html
@@ -231,9 +231,7 @@
     <div id="bgMob" id="background-mobile" alt=""></div>
   </section>
   <section id="video">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/BNdCMMZbkdo" title="YouTube video player"
-      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/aBuU-CmrTjg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <article>
       <h3>By you, for you</h2>
         <p id="videoPar">We are selling DIY kits containing different types of shaping wax, shaping tools, instructions
