--- a/contact.html
+++ b/contact.html
@@ -342,6 +342,77 @@
         /></a>
       </div>
     </section>
+
+    <div id="thickLines"><img src="css/thick-lines-bg.svg" alt="" /></div>
+
+    <section id="title">
+      <h1 id="decorative">Get in touch!</h1>
+      <p>
+        I’m always happy to help with any questions or problems you might have
+        regarding BYÚ studio. You can leave me a message here, or reach out to
+        me on Instagram and I’ll get back to you as soon as possible!
+      </p>
+    </section>
+    <main>
+      <section class="contact_info">
+        <h3>Contact information</h3>
+        <p>Email: hello@byu.dk</p>
+        <p>Phone number: +45 12 34 56 78</p>
+        <p>Instagram: @byustudio</p>
+        <p>Facebook: /byu.studio</p>
+        <p>Address: København, Danmark</p>
+      </section>
+
+      <section class="contact_form">
+        <h3>Send a message</h3>
+        <section class="form-input">
+          <div class="two-box-flex">
+            <input
+              type="text"
+              id="firstname"
+              name="firstname"
+              placeholder="Name"
+            />
+            <input
+              type="text"
+              id="surname"
+              name="surname"
+              placeholder="Surname"
+            />
+          </div>
+          <input
+            type="tel"
+            name="phonenumber"
+            id="phonenumber"
+            placeholder="Telephone number"
+          />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Email"
+            />
+
+            <input
+            type="text"
+            name="subject"
+            id="subject"
+            placeholder="Subject"
+            />
+
+            <textarea
+            name="message"
+            required
+            id="message"
+            rows="8"
+            columns="8"
+            ></textarea>
+            
+
+      </section>
+      <button>Send Message</button>
+    </main>
+
     <footer>
       <img src="assets/Black_logo 1.svg" alt="logo-icon" />
       <p id="description">
