checking if cloned the right repo

--- a/faq.html
+++ b/faq.html
@@ -219,6 +219,7 @@
           alt="Pinterest logo" /></a>
     </div>
   </section>
+  <main></main>
   <footer>
     <img src="assets/Black_logo 1.svg" alt="logo-icon" />
     <p id="description">
