--- a/faq.html
+++ b/faq.html
@@ -49,6 +49,7 @@
       <a href="checkout-info.html" class="cart-to-checkout"><button>Proceed to checkout</button></a>
     </div>
   </header>
+  <div id="thickLines"></div>
   <section class="sec-hamburger">
     <div class="head-hamburger">
       <img class="close-icon" src="assets/cross-white.png" alt="X for closing hamburgermenu" />
@@ -219,7 +220,9 @@
           alt="Pinterest logo" /></a>
     </div>
   </section>
-  <main></main>
+  <main>
+
+  </main>
   <footer>
     <img src="assets/Black_logo 1.svg" alt="logo-icon" />
     <p id="description">
