starting all over

--- a/faq.html
+++ b/faq.html
@@ -221,6 +221,13 @@
     </div>
   </section>
   <main>
+    <section id="title">
+      <h1 id="decorative">Hi! My name is Bea</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et parturient
+        magna nunc, lectus risus ultricies pellentesque. Semper lobortis
+        praesent elementum suspendisse auctor consectetur dui, eget in.
+      </p>
 
   </main>
   <footer>
