--- a/faq.html
+++ b/faq.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="css/faq.css" />
+  <link rel="stylesheet" href="css/additional-pages.css" />
   <link rel="stylesheet" href="css/root.css" />
   <link rel="stylesheet" href="css/menu.css" />
   <link rel="stylesheet" href="css/nav.css" />
@@ -49,7 +50,7 @@
       <a href="checkout-info.html" class="cart-to-checkout"><button>Proceed to checkout</button></a>
     </div>
   </header>
-  <div id="thickLines"></div>
+  <div class="bg-brush-waves"></div>
   <section class="sec-hamburger">
     <div class="head-hamburger">
       <img class="close-icon" src="assets/cross-white.png" alt="X for closing hamburgermenu" />
@@ -221,14 +222,44 @@
     </div>
   </section>
   <main>
-    <section id="title">
-      <h1 id="decorative">Hi! My name is Bea</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et parturient
-        magna nunc, lectus risus ultricies pellentesque. Semper lobortis
-        praesent elementum suspendisse auctor consectetur dui, eget in.
-      </p>
-
+    <h1 class="page-title">Frequently asked questions</h1>
+    <section class="faq-section">
+      <h2 class="section-title">Kit</h2>
+      <h3 class="faq-question">What is included in my kit?</h3>
+      <p class="faq-answer hidden">Your kit includes ...</p>
+      <h3 class="faq-question">Can I order more wax?</h3>
+      <p class="faq-answer hidden">Yes, you can order more wax in the shop.</p>
+    </section>
+    <section class="faq-section">
+      <h2 class="section-title">Ordering process</h2>
+      <h3 class="faq-question">How does BYU studio work?</h3>
+      <p class="faq-answer hidden">The service of BYU offers buying only a kit of wax or a kit of wax altogether with
+        preordering...</p>
+      <h3 class="faq-question">Can I order casting later?</h3>
+      <p class="faq-answer hidden">Yes, you can order the casting of your piece later by doing the following steps:</p>
+      <h3 class="faq-question">How can I order separate casting?</h3>
+      <p class="faq-answer hidden">If you already have ordered your kit, you should <a href="#">click here.</a></p>
+    </section>
+    <section class="faq-section">
+      <h2 class="section-title">Using kit</h2>
+      <h3 class="faq-question">How do I work with wax?</h3>
+      <p class="faq-answer hidden">Don't be afraid of the wax! You can work with wax doing [...]. You can also check <a
+          href="#">these tutorials</a> where working with wax is explained in depth.</p>
+      <h3 class="faq-question">Can I order casting later?</h3>
+      <p class="faq-answer hidden">Yes, you can order the casting of your piece later by doing the following steps:</p>
+      <h3 class="faq-question">How can I order separate casting?</h3>
+      <p class="faq-answer hidden">If you already have ordered your kit, you should <a href="#">click here.</a></p>
+    </section>
+    <section class="faq-section">
+      <h2 class="section-title">Materials</h2>
+      <h3 class="faq-question">How do I know which metal I want to get my jewellery be cast in?</h3>
+      <p class="faq-answer hidden">Gold is for [...] and silver is for [...]</p>
+      <h3 class="faq-question">Are the metals sustainable?</h3>
+      <p class="faq-answer hidden">Yes! All the metals used are recycled.</p>
+      <h3 class="faq-question">How do I work with wax?</h3>
+      <p class="faq-answer hidden">Don't be afraid of the wax! You can work with wax doing [...]. You can also check <a
+          href="#">these tutorials</a> where working with wax is explained in depth.</p>
+    </section>
   </main>
   <footer>
     <img src="assets/Black_logo 1.svg" alt="logo-icon" />
