--- a/faq.html
+++ b/faq.html
@@ -223,8 +223,10 @@
   </section>
   <main>
     <h1 class="page-title">Frequently asked questions</h1>
+    <div class="labels-box"><button class="label">Kit content</button><button class="label">Ordering
+        process</button><button class="label">Using kit</button><button class="label">Materials</button></div>
     <section class="faq-section">
-      <h2 class="section-title">Kit</h2>
+      <h2 class="section-title">Kit content</h2>
       <h3 class="faq-question">What is included in my kit?</h3>
       <p class="faq-answer hidden">Your kit includes ...</p>
       <h3 class="faq-question">Can I order more wax?</h3>
