styled faq mobile

--- a/faq.html
+++ b/faq.html
@@ -227,38 +227,72 @@
         process</button><button class="label">Using kit</button><button class="label">Materials</button></div>
     <section class="faq-section">
       <h2 class="section-title">Kit content</h2>
-      <h3 class="faq-question">What is included in my kit?</h3>
+      <div class="faq-title-box">
+        <h3 class="faq-question">What is included in my kit?</h3>
+        <img src="assets/arrow.svg" alt="">
+      </div>
+      </div>
       <p class="faq-answer hidden">Your kit includes ...</p>
-      <h3 class="faq-question">Can I order more wax?</h3>
+      <div class="faq-title-box">
+        <h3 class="faq-question">Can I order more wax?</h3>
+        <img src="assets/arrow.svg" alt="">
+      </div>
       <p class="faq-answer hidden">Yes, you can order more wax in the shop.</p>
     </section>
     <section class="faq-section">
       <h2 class="section-title">Ordering process</h2>
-      <h3 class="faq-question">How does BYU studio work?</h3>
+      <div class="faq-title-box">
+        <h3 class="faq-question">How does BYU studio work?</h3>
+        <img src="assets/arrow.svg" alt="">
+      </div>
       <p class="faq-answer hidden">The service of BYU offers buying only a kit of wax or a kit of wax altogether with
         preordering...</p>
-      <h3 class="faq-question">Can I order casting later?</h3>
+      <div class="faq-title-box">
+        <h3 class="faq-question">Can I order casting later?</h3>
+        <img src="assets/arrow.svg" alt="">
+      </div>
       <p class="faq-answer hidden">Yes, you can order the casting of your piece later by doing the following steps:</p>
-      <h3 class="faq-question">How can I order separate casting?</h3>
+      <div class="faq-title-box">
+        <h3 class="faq-question">How can I order separate casting?</h3>
+        <img src="assets/arrow.svg" alt="">
+      </div>
       <p class="faq-answer hidden">If you already have ordered your kit, you should <a href="#">click here.</a></p>
     </section>
     <section class="faq-section">
       <h2 class="section-title">Using kit</h2>
-      <h3 class="faq-question">How do I work with wax?</h3>
+      <div class="faq-title-box">
+        <h3 class="faq-question">How do I work with wax?</h3>
+        <img src="assets/arrow.svg" alt="">
+      </div>
       <p class="faq-answer hidden">Don't be afraid of the wax! You can work with wax doing [...]. You can also check <a
           href="#">these tutorials</a> where working with wax is explained in depth.</p>
-      <h3 class="faq-question">Can I order casting later?</h3>
+      <div class="faq-title-box">
+        <h3 class="faq-question">Can I order casting later?</h3>
+        <img src="assets/arrow.svg" alt="">
+      </div>
       <p class="faq-answer hidden">Yes, you can order the casting of your piece later by doing the following steps:</p>
-      <h3 class="faq-question">How can I order separate casting?</h3>
+      <div class="faq-title-box">
+        <h3 class="faq-question">How can I order separate casting?</h3>
+        <img src="assets/arrow.svg" alt="">
+      </div>
       <p class="faq-answer hidden">If you already have ordered your kit, you should <a href="#">click here.</a></p>
     </section>
     <section class="faq-section">
       <h2 class="section-title">Materials</h2>
-      <h3 class="faq-question">How do I know which metal I want to get my jewellery be cast in?</h3>
+      <div class="faq-title-box">
+        <h3 class="faq-question">How do I know which metal I want to get my jewellery be cast in?</h3>
+        <img src="assets/arrow.svg" alt="">
+      </div>
       <p class="faq-answer hidden">Gold is for [...] and silver is for [...]</p>
-      <h3 class="faq-question">Are the metals sustainable?</h3>
+      <div class="faq-title-box">
+        <h3 class="faq-question">Are the metals sustainable?</h3>
+        <img src="assets/arrow.svg" alt="">
+      </div>
       <p class="faq-answer hidden">Yes! All the metals used are recycled.</p>
-      <h3 class="faq-question">How do I work with wax?</h3>
+      <div class="faq-title-box">
+        <h3 class="faq-question">How do I work with wax?</h3>
+        <img src="assets/arrow.svg" alt="">
+      </div>
       <p class="faq-answer hidden">Don't be afraid of the wax! You can work with wax doing [...]. You can also check <a
           href="#">these tutorials</a> where working with wax is explained in depth.</p>
     </section>
