finished styling faq

--- a/faq.html
+++ b/faq.html
@@ -223,78 +223,90 @@
   </section>
   <main>
     <h1 class="page-title">Frequently asked questions</h1>
-    <div class="labels-box"><button class="label">Kit content</button><button class="label">Ordering
-        process</button><button class="label">Using kit</button><button class="label">Materials</button></div>
-    <section class="faq-section">
+    <div class="labels-box">
+      <a href="#kit"><button class="label">Kit content</button></a>
+      <a href="#order"><button class="label">Ordering process</button></a>
+      <a href="#using-kit"><button class="label">Using kit</button></a>
+      <a href="#materials"><button class="label">Materials</button></a></div>
+    <section class="faq-section content-section" id="kit">
       <h2 class="section-title">Kit content</h2>
-      <div class="faq-title-box">
-        <h3 class="faq-question">What is included in my kit?</h3>
-        <img src="assets/arrow.svg" alt="">
+      <div class="body-box">
+        <div class="faq-title-box">
+          <h3 class="faq-question">What is included in my kit?</h3>
+          <img src="assets/arrow.svg" alt="">
+        </div>
+        <p class="faq-answer hidden">Your kit includes ...</p>
+        <div class="faq-title-box">
+          <h3 class="faq-question">Can I order more wax?</h3>
+          <img src="assets/arrow.svg" alt="">
+        </div>
+        <p class="faq-answer hidden">Yes, you can order more wax in the shop.</p>
       </div>
-      </div>
-      <p class="faq-answer hidden">Your kit includes ...</p>
-      <div class="faq-title-box">
-        <h3 class="faq-question">Can I order more wax?</h3>
-        <img src="assets/arrow.svg" alt="">
-      </div>
-      <p class="faq-answer hidden">Yes, you can order more wax in the shop.</p>
     </section>
-    <section class="faq-section">
+    <section class="faq-section content-section" id="order">
       <h2 class="section-title">Ordering process</h2>
-      <div class="faq-title-box">
-        <h3 class="faq-question">How does BYU studio work?</h3>
-        <img src="assets/arrow.svg" alt="">
+      <div class="body-box">
+        <div class="faq-title-box">
+          <h3 class="faq-question">How does BYU studio work?</h3>
+          <img src="assets/arrow.svg" alt="">
+        </div>
+        <p class="faq-answer hidden">The service of BYU offers buying only a kit of wax or a kit of wax altogether with
+          preordering...</p>
+        <div class="faq-title-box">
+          <h3 class="faq-question">Can I order casting later?</h3>
+          <img src="assets/arrow.svg" alt="">
+        </div>
+        <p class="faq-answer hidden">Yes, you can order the casting of your piece later by doing the following steps:
+        </p>
+        <div class="faq-title-box">
+          <h3 class="faq-question">How can I order separate casting?</h3>
+          <img src="assets/arrow.svg" alt="">
+        </div>
+        <p class="faq-answer hidden">If you already have ordered your kit, you should <a href="#">click here.</a></p>
       </div>
-      <p class="faq-answer hidden">The service of BYU offers buying only a kit of wax or a kit of wax altogether with
-        preordering...</p>
-      <div class="faq-title-box">
-        <h3 class="faq-question">Can I order casting later?</h3>
-        <img src="assets/arrow.svg" alt="">
-      </div>
-      <p class="faq-answer hidden">Yes, you can order the casting of your piece later by doing the following steps:</p>
-      <div class="faq-title-box">
-        <h3 class="faq-question">How can I order separate casting?</h3>
-        <img src="assets/arrow.svg" alt="">
-      </div>
-      <p class="faq-answer hidden">If you already have ordered your kit, you should <a href="#">click here.</a></p>
     </section>
-    <section class="faq-section">
+    <section class="faq-section content-section" id="using-kit">
       <h2 class="section-title">Using kit</h2>
-      <div class="faq-title-box">
-        <h3 class="faq-question">How do I work with wax?</h3>
-        <img src="assets/arrow.svg" alt="">
+      <div class="body-box">
+        <div class="faq-title-box">
+          <h3 class="faq-question">How do I work with wax?</h3>
+          <img src="assets/arrow.svg" alt="">
+        </div>
+        <p class="faq-answer hidden">Don't be afraid of the wax! You can work with wax doing [...]. You can also check
+          <a href="#">these tutorials</a> where working with wax is explained in depth.</p>
+        <div class="faq-title-box">
+          <h3 class="faq-question">Can I order casting later?</h3>
+          <img src="assets/arrow.svg" alt="">
+        </div>
+        <p class="faq-answer hidden">Yes, you can order the casting of your piece later by doing the following steps:
+        </p>
+        <div class="faq-title-box">
+          <h3 class="faq-question">How can I order separate casting?</h3>
+          <img src="assets/arrow.svg" alt="">
+        </div>
+        <p class="faq-answer hidden">If you already have ordered your kit, you should <a href="#">click here.</a></p>
       </div>
-      <p class="faq-answer hidden">Don't be afraid of the wax! You can work with wax doing [...]. You can also check <a
-          href="#">these tutorials</a> where working with wax is explained in depth.</p>
-      <div class="faq-title-box">
-        <h3 class="faq-question">Can I order casting later?</h3>
-        <img src="assets/arrow.svg" alt="">
-      </div>
-      <p class="faq-answer hidden">Yes, you can order the casting of your piece later by doing the following steps:</p>
-      <div class="faq-title-box">
-        <h3 class="faq-question">How can I order separate casting?</h3>
-        <img src="assets/arrow.svg" alt="">
-      </div>
-      <p class="faq-answer hidden">If you already have ordered your kit, you should <a href="#">click here.</a></p>
     </section>
-    <section class="faq-section">
+    <section class="faq-section content-section" id="materials">
       <h2 class="section-title">Materials</h2>
-      <div class="faq-title-box">
-        <h3 class="faq-question">How do I know which metal I want to get my jewellery be cast in?</h3>
-        <img src="assets/arrow.svg" alt="">
+      <div class="body-box">
+        <div class="faq-title-box">
+          <h3 class="faq-question">How do I know which metal I want my jewellery be cast in?</h3>
+          <img src="assets/arrow.svg" alt="">
+        </div>
+        <p class="faq-answer hidden">Gold is for [...] and silver is for [...]</p>
+        <div class="faq-title-box">
+          <h3 class="faq-question">Are the metals sustainable?</h3>
+          <img src="assets/arrow.svg" alt="">
+        </div>
+        <p class="faq-answer hidden">Yes! All the metals used are recycled.</p>
+        <div class="faq-title-box">
+          <h3 class="faq-question">How do I work with wax?</h3>
+          <img src="assets/arrow.svg" alt="">
+        </div>
+        <p class="faq-answer hidden">Don't be afraid of the wax! You can work with wax doing [...]. You can also check
+          <a href="#">these tutorials</a> where working with wax is explained in depth.</p>
       </div>
-      <p class="faq-answer hidden">Gold is for [...] and silver is for [...]</p>
-      <div class="faq-title-box">
-        <h3 class="faq-question">Are the metals sustainable?</h3>
-        <img src="assets/arrow.svg" alt="">
-      </div>
-      <p class="faq-answer hidden">Yes! All the metals used are recycled.</p>
-      <div class="faq-title-box">
-        <h3 class="faq-question">How do I work with wax?</h3>
-        <img src="assets/arrow.svg" alt="">
-      </div>
-      <p class="faq-answer hidden">Don't be afraid of the wax! You can work with wax doing [...]. You can also check <a
-          href="#">these tutorials</a> where working with wax is explained in depth.</p>
     </section>
   </main>
   <footer>
