added title and bg to inspiration

--- a/inspiration.html
+++ b/inspiration.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" />
   <link rel="stylesheet" href="css/root.css" />
+  <link rel="stylesheet" href="css/additional-pages.css" />
   <link rel="stylesheet" href="css/inspiration.css" />
   <link rel="stylesheet" href="css/cart.css" />
   <link rel="stylesheet" href="css/menu.css" />
@@ -50,6 +51,7 @@
       <a href="checkout-info.html" class="cart-to-checkout"><button>Proceed to checkout</button></a>
     </div>
   </header>
+  <div class="bg-brush-waves"></div>
   <section class="sec-hamburger">
     <div class="head-hamburger">
       <img class="close-icon" src="assets/cross-white.png" alt="X for closing hamburgermenu" />
@@ -220,7 +222,9 @@
           alt="Pinterest logo" /></a>
     </div>
   </section>
-  <main></main>
+  <main>
+    <h1 class="page-title">Our customers made</h1>
+  </main>
   <footer>
     <img src="assets/Black_logo 1.svg" alt="logo-icon" />
     <p id="description">
