--- a/about.html
+++ b/about.html
@@ -244,11 +244,13 @@
                     dignissim urna. Risus eleifend. </p>
             </div>
         </section>
-        <div class="deco-lines"></div>
+        <div class="waves-grid">
+            <div class="deco-lines"></div>
+        </div>
         <section class="content-section">
             <h2 class="section-title">How does it work?</h2>
             <div class="body-box">
-                <ol>
+                <ol class="process">
                     <li>Order your kit</li>
                     <li>Wait for your kit to arrive</li>
                     <li>Create your piece of jewellery</li>
