added care guide html

--- a/about.html
+++ b/about.html
@@ -308,7 +308,7 @@
         </div>
     </footer>
 </body>
-<!-- <script src="js/cart.js"></script> -->
+<script src="js/cart.js"></script>
 <script src="js/hamburger.js"></script>
 
 </html>
