initial care guide styling

--- a/about.html
+++ b/about.html
@@ -233,7 +233,7 @@
             praesent elementum suspendisse auctor consectetur dui, eget in.
         </p>
         <section class="content-section">
-            <h2 class="section-title">What is BYU?</h2>
+            <h2 class="section-title yellow">What is BYU?</h2>
             <div class="body-box">
                 <p class="faq-answer">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam elit auctor tortor faucibus commodo.
@@ -248,7 +248,7 @@
             <div class="deco-lines"></div>
         </div>
         <section class="content-section">
-            <h2 class="section-title">How does it work?</h2>
+            <h2 class="section-title yellow">How does it work?</h2>
             <div class="body-box">
                 <ol class="process">
                     <li>Order your kit</li>
