--- a/careguide.html
+++ b/careguide.html
@@ -232,44 +232,34 @@
             praesent elementum suspendisse auctor consectetur dui, eget in.
         </p>
         <section class="content-section">
-            <h2 class="section-title">General metal care</h2>
+            <h2 class="section-title yellow">General metal care</h2>
             <div class="body-box">
                 <ol class="process">
-                    <li>Order your kit</li>
-                    <li>Wait for your kit to arrive</li>
-                    <li>Create your piece of jewellery</li>
-                    <li>Register your kit</li>
-                    <li>Send your kit back</li>
-                    <li>Get it cast</li>
-                </ol>
-            </div>
-        </section>
-        <div class="waves-grid">
-            <div class="deco-lines"></div>
-        </div>
-        <section class="content-section">
-            <h2 class="section-title">Gold care</h2>
-            <div class="body-box">
-                <ol class="process">
-                    <li>Order your kit</li>
-                    <li>Wait for your kit to arrive</li>
-                    <li>Create your piece of jewellery</li>
-                    <li>Register your kit</li>
-                    <li>Send your kit back</li>
-                    <li>Get it cast</li>
+                    <li>Tip number one</li>
+                    <li>Another tip about general metal care</li>
+                    <li>Some more tips</li>
                 </ol>
             </div>
         </section>
         <section class="content-section">
-            <h2 class="section-title">Silver care</h2>
+            <h2 class="section-title yellow">Gold care</h2>
             <div class="body-box">
                 <ol class="process">
-                    <li>Order your kit</li>
-                    <li>Wait for your kit to arrive</li>
-                    <li>Create your piece of jewellery</li>
-                    <li>Register your kit</li>
-                    <li>Send your kit back</li>
-                    <li>Get it cast</li>
+                    <li>Tip about gold number one</li>
+                    <li>Another tip about gold care</li>
+                    <li>One more tip about gold</li>
+                    <li>The last tip about gold</li>
+                </ol>
+            </div>
+        </section>
+        <section class="content-section">
+            <h2 class="section-title yellow">Silver care</h2>
+            <div class="body-box">
+                <ol class="process">
+                    <li>Silver care tip no. 1</li>
+                    <li>A bit longer care tip about silver because we need to see how the design looks like with long
+                        sentences.</li>
+                    <li>The last tip about silver</li>
                 </ol>
             </div>
         </section>
