--- a/about.html
+++ b/about.html
@@ -235,8 +235,7 @@
         <section class="content-section">
             <h2 class="section-title yellow">What is BYU?</h2>
             <div class="body-box">
-                <p class="faq-answer">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam elit auctor tortor faucibus commodo.
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam elit auctor tortor faucibus commodo.
                     Congue potenti tellus et ornare consequat. Turpis tellus non dictum amet tempor. Quam sollicitudin
                     elementum lobortis non a pulvinar vulputate quis quis. Ac faucibus quis pretium commodo ultrices
                     varius. Sagittis arcu gravida cras vel id. Vestibulum in tincidunt aliquam neque. Sed eget et vitae
