added more styling

--- a/about.html
+++ b/about.html
@@ -17,12 +17,15 @@
 </head>
 
 <body>
+    <div class="bg-brush-waves"></div>
     <header>
-        <nav>
-            <img class="open-button" src="assets/menu.svg" alt="menu-icon" />
-            <a href="index.html"><img src="assets/Black_logo 1.svg" alt="logo-icon" /></a>
-            <img src="assets/cart.svg" alt="cart-icon" class="toggle-btn" />
-        </nav>
+        <div class="nav-box">
+            <nav>
+                <img class="open-button" src="assets/menu.svg" alt="menu-icon" />
+                <a href="index.html"><img src="assets/Black_logo 1.svg" alt="logo-icon" /></a>
+                <img src="assets/cart.svg" alt="cart-icon" class="toggle-btn" />
+            </nav>
+        </div>
         <div class=" cart-outer-box">
             <img src="assets/cross-thin.svg" alt="Remove item" class="close-cart" />
             <h1 class="page-title">Cart</h1>
@@ -50,7 +53,6 @@
             <a href="checkout-info.html" class="cart-to-checkout"><button>Proceed to checkout</button></a>
         </div>
     </header>
-    <div class="bg-brush-waves"></div>
     <section class="sec-hamburger">
         <div class="head-hamburger">
             <img class="close-icon" src="assets/cross-white.png" alt="X for closing hamburgermenu" />
@@ -227,13 +229,13 @@
     <main>
         <h1 class="page-title">Hi, my name is Bea!</h1>
         <img src="assets/bea-about.jpg" alt="BYÙ Studio owner Bea in her studio" class="landing-img-abt">
-        <p class="intro-text">
+        <p class="intro-text about-intro">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Et parturient
             magna nunc, lectus risus ultricies pellentesque. Semper lobortis
             praesent elementum suspendisse auctor consectetur dui, eget in.
         </p>
         <section class="content-section">
-            <h2 class="section-title yellow">What is BYU?</h2>
+            <h2 class="section-title yellow">What is BYÙ?</h2>
             <div class="body-box">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam elit auctor tortor faucibus commodo.
                     Congue potenti tellus et ornare consequat. Turpis tellus non dictum amet tempor. Quam sollicitudin
@@ -250,12 +252,36 @@
             <h2 class="section-title yellow">How does it work?</h2>
             <div class="body-box">
                 <ol class="process">
-                    <li>Order your kit</li>
-                    <li>Wait for your kit to arrive</li>
-                    <li>Create your piece of jewellery</li>
-                    <li>Register your kit</li>
-                    <li>Send your kit back</li>
-                    <li>Get it cast</li>
+                    <div class="list-box"><img src="assets/step-one.svg" alt="">
+                        <li>Order your kit</li>
+                    </div>
+                    <p>Lorem ipsum more lorem ipsum and some explanations about the process right here because it is
+                        super important hey hey hey hey</p>
+                    <div class="list-box"><img src="assets/step-two.svg" alt="">
+                        <li>Wait for your kit to arrive</li>
+                    </div>
+                    <p>Lorem ipsum more lorem ipsum and some explanations about the process right here because it is
+                        super important hey hey hey hey</p>
+                    <div class="list-box"><img src="assets/step-three.svg" alt="">
+                        <li>Create your piece of jewellery</li>
+                    </div>
+                    <p>Lorem ipsum more lorem ipsum and some explanations about the process right here because it is
+                        super important hey hey hey hey</p>
+                    <div class="list-box"><img src="assets/step-four.svg" alt="">
+                        <li>Register your kit</li>
+                    </div>
+                    <p>Lorem ipsum more lorem ipsum and some explanations about the process right here because it is
+                        super important hey hey hey hey</p>
+                    <div class="list-box"><img src="assets/step-five.svg" alt="">
+                        <li>Send your kit back</li>
+                    </div>
+                    <p>Lorem ipsum more lorem ipsum and some explanations about the process right here because it is
+                        super important hey hey hey hey</p>
+                    <div class="list-box"><img src="assets/step-six.svg" alt="">
+                        <li>Get it cast</li>
+                    </div>
+                    <p>Lorem ipsum more lorem ipsum and some explanations about the process right here because it is
+                        super important hey hey hey hey</p>
                 </ol>
             </div>
         </section>
