--- a/sustainanability.html
+++ b/sustainanability.html
@@ -17,12 +17,16 @@
 </head>
 
 <body>
+
+    <div class="bg-brush-waves"></div>
     <header>
-        <nav>
-            <img class="open-button" src="assets/menu.svg" alt="menu-icon" />
-            <a href="index.html"><img src="assets/Black_logo 1.svg" alt="logo-icon" /></a>
-            <img src="assets/cart.svg" alt="cart-icon" class="toggle-btn" />
-        </nav>
+        <div class="nav-box">
+            <nav>
+                <img class="open-button" src="assets/menu.svg" alt="menu-icon" />
+                <a href="index.html"><img src="assets/Black_logo 1.svg" alt="logo-icon" /></a>
+                <img src="assets/cart.svg" alt="cart-icon" class="toggle-btn" />
+            </nav>
+        </div>
         <div class=" cart-outer-box">
             <img src="assets/cross-thin.svg" alt="Remove item" class="close-cart" />
             <h1 class="page-title">Cart</h1>
@@ -50,7 +54,6 @@
             <a href="checkout-info.html" class="cart-to-checkout"><button>Proceed to checkout</button></a>
         </div>
     </header>
-    <div class="bg-brush-waves"></div>
     <section class="sec-hamburger">
         <div class="head-hamburger">
             <img class="close-icon" src="assets/cross-white.png" alt="X for closing hamburgermenu" />
