added more styling

--- a/manifesto.html
+++ b/manifesto.html
@@ -17,12 +17,15 @@
 </head>
 
 <body>
+    <div class="bg-brush-waves"></div>
     <header>
-        <nav>
-            <img class="open-button" src="assets/menu.svg" alt="menu-icon" />
-            <a href="index.html"><img src="assets/Black_logo 1.svg" alt="logo-icon" /></a>
-            <img src="assets/cart.svg" alt="cart-icon" class="toggle-btn" />
-        </nav>
+        <div class="nav-box">
+            <nav>
+                <img class="open-button" src="assets/menu.svg" alt="menu-icon" />
+                <a href="index.html"><img src="assets/Black_logo 1.svg" alt="logo-icon" /></a>
+                <img src="assets/cart.svg" alt="cart-icon" class="toggle-btn" />
+            </nav>
+        </div>
         <div class=" cart-outer-box">
             <img src="assets/cross-thin.svg" alt="Remove item" class="close-cart" />
             <h1 class="page-title">Cart</h1>
@@ -50,7 +53,6 @@
             <a href="checkout-info.html" class="cart-to-checkout"><button>Proceed to checkout</button></a>
         </div>
     </header>
-    <div class="bg-brush-waves"></div>
     <section class="sec-hamburger">
         <div class="head-hamburger">
             <img class="close-icon" src="assets/cross-white.png" alt="X for closing hamburgermenu" />
@@ -235,16 +237,33 @@
             <h2 class="section-title beige">BYÙ Studio stands for</h2>
             <div class="body-box">
                 <ol class="process">
-                    <li>Handmade in Denmark</li>
-                    <li>Personalised and co-created products</li>
-                    <li>Unique moments</li>
-                    <li>One of a kind products</li>
-                    <li>Responsible production business model</li>
-                    <li>Social responsible production</li>
-                    <li>Good quality, long lasting products</li>
-                    <li>Slow fashion approach</li>
-                    <li>Information about responsible consumption</li>
-                    <li>Made by you for you</li>
+                    <div class="list-box"><img src="assets/step-one.svg" alt="">
+                        <li>Handmade in Denmark</li>
+                    </div>
+                    <div class="list-box"><img src="assets/step-two.svg" alt="">
+                        <li>Personalised and co-created products</li>
+                    </div>
+                    <div class="list-box"><img src="assets/step-three.svg" alt="">
+                        <li>Unique moments</li>
+                    </div>
+                    <div class="list-box"><img src="assets/step-four.svg" alt="">
+                        <li>One of a kind products</li>
+                    </div>
+                    <div class="list-box"><img src="assets/step-five.svg" alt="">
+                        <li>Responsible production business model</li>
+                    </div>
+                    <div class="list-box"><img src="assets/step-six.svg" alt="">
+                        <li>Good quality, long lasting products</li>
+                    </div>
+                    <div class="list-box"><img src="assets/step-seven.svg" alt="">
+                        <li>Slow fashion approach</li>
+                    </div>
+                    <div class="list-box"><img src="assets/step-eight.svg" alt="">
+                        <li>Information about responsible consumption</li>
+                    </div>
+                    <div class="list-box"><img src="assets/step-nine.svg" alt="">
+                        <li>Made by you for you</li>
+                    </div>
                 </ol>
             </div>
         </section>
